@@ -9,3 +9,4 @@ Lead developer:
 Occasional patches:
 
   Daniel Turing
+  Vincenzo Pupillo
